   - port arguments are now UINT, not LPCTSTR
* Updated CFrame
   - Frames now use IDW_READY for the "Ready" string
   - CFrame no longer requires the number of images in the ToolBar bitmap to
      equal the number of ToolBar buttons. The width of the button bitmap is
      now assumed to be equal to its height or a minimum of 16.
* Updated CWnd
   - Added OnClose. It is called automatically when a window asks to be closed.
   - Added OnDestroy. It is called automatically when a window is destroyed.
   - CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
      the menu parameter to specify a menu for a parent window, or a window ID
      for a child window.
* Updated CFile:
   - CFile functions are now virtual.
   - OpenFileDialog and SaveFileDialog allow the dialog title to be specified.
* TRACE now accepts both ANSI and Unicode strings.
* Added project files for VS2013
* CToolBar::SetButtonInfo can now be used to change a ToolBar button's 
  image and command ID.



Changes in detail
-----------------
- Added CFrame::CustomDrawToolBar
- Added CFrame::GetReBarTheme
- Added CFrame::GetToolBarTheme
- Added CFrame::SetReBarTheme
- Added CFrame::SetToolBarTheme
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Added CToolBar::SetButtonInfo
- Added CWnd::GetDlgCtrlID
- Added CWnd::OnClose
- Added CWnd::OnDestroy
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CMDIChild::OnClose           now returns void.
- Modified CSocket::Bind                port is now UINT
- Modified CSocket::Connect             port is now UINT
- Modified CSocket::Receive             uses char instead of TCHAR
- Modified CSocket::RecieveFrom         uses char instead of TCHAR
- Modified CSocket::Send                uses char instead of TCHAR
- Modified CSocket::SendTo              uses char instead of TCHAR
- Modified CString  operator == 		now accepts const