@@ -187,13 +187,13 @@ namespace Win32xx
 		assert(::IsWindow(m_hWnd));
 		assert(iPart >= 0 && iPart <= 255);
 
-		// Fill the PartWidths vector with the current width of the statusbar parts
+		// Fill the PartWidths vector with the current width of the StatusBar parts
 		int PartsCount = (int)SendMessage(SB_GETPARTS, 0L, 0L);
 		std::vector<int> PartWidths(PartsCount, 0);
 		int* pPartWidthArray = &PartWidths[0];
 		SendMessage(SB_GETPARTS, PartsCount, (LPARAM)pPartWidthArray);
 
-		// Fill the NewPartWidths vector with the new width of the statusbar parts
+		// Fill the NewPartWidths vector with the new width of the StatusBar parts
 		int NewPartsCount = MAX(iPart+1, PartsCount);	
 		std::vector<int> NewPartWidths(NewPartsCount, 0);;
 		NewPartWidths = PartWidths;
@@ -209,7 +209,7 @@ namespace Win32xx
 				pNewPartWidthArray[iPart] = -1;
 		}
 
-		// Set the statusbar parts with our new parts count and part widths
+		// Set the StatusBar parts with our new parts count and part widths
 		BOOL bResult = (BOOL)SendMessage(SB_SETPARTS, NewPartsCount, (LPARAM)pNewPartWidthArray);
 
 		return bResult;
