@@ -21,6 +21,8 @@ New Features and Enhancements
    - CFrame no longer requires the number of images in the ToolBar bitmap to
       equal the number of ToolBar buttons. The width of the button bitmap is
       now assumed to be equal to its height or a minimum of 16.
+   - The code for ToolBar and MenuBar themes has been moved to CFrame, making it
+      easier to override.
 * Updated CWnd
    - Added OnClose. It is called automatically when a window asks to be closed.
    - Added OnDestroy. It is called automatically when a window is destroyed.
@@ -30,11 +32,11 @@ New Features and Enhancements
 * Updated CFile:
    - CFile functions are now virtual.
    - OpenFileDialog and SaveFileDialog allow the dialog title to be specified.
+* Updated CToolBar
+   - SetButtonInfo can now be used to change a ToolBar button's image and 
+      command ID.  
 * TRACE now accepts both ANSI and Unicode strings.
 * Added project files for VS2013
-* CToolBar::SetButtonInfo can now be used to change a ToolBar button's 
-  image and command ID.
-
 
 
 Changes in detail
@@ -64,11 +66,15 @@ Changes in detail
 - Modified CString  operator [] 		now accepts const
 - Modified CWnd::CreateEx               now uses HMENU instead of CMenu*
 - Modified CWnd::DeferWindowPos			now uses CWnd* for second argument
+- Removed CMenuBar::GetMenuTheme
+- Removed CMenuBar::SetMenuTheme
 - Removed CReBar::GetReBarTheme
 - Removed CReBar::SetReBarTheme
 - Removed CToolBar::GetToolBarTheme
 - Removed CToolBar::SetToolBarTheme
 - Removed CToolBar::OnCustomDraw
+- Renamed CFrame::GetMenuTheme to CFrame::GetMenuBarTheme
+- Renamed CFrame::SetMenuTheme to CFrame::SetMenuBarTheme
 
 Added IDW_READY resource for ready string.
 Added VS2013 project files
